--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.81.4",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
+    "react-native-svg": "^15.13.0",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
@@ -38,6 +39,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.5.1",
     "react-test-renderer": "19.1.0",
     "typescript": "^5.8.3"
   },
